# mise

./: .dockerignore  CHANGELOG.md  Dockerfile  README.md  renovate.json
.github/workflows/: _build.yml  build.yml  pull-request.yml  release.yml
e2e/: .gitignore  mise.toml  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: recipe-image.attribution.txt
e2e/tests/: apis.ts  fixtures.ts  helpers.ts
e2e/tests/base/: landing.spec.ts
e2e/tests/recipes/: add.spec.ts  edit.spec.ts  list.spec.ts  tag.spec.ts  view.spec.ts
e2e/tests/settings/: settings.spec.ts
server/: .gitignore  Cargo.toml  deny.toml
server/.github/workflows/: pull-request.yml
server/src/: cache.rs  config.rs  core.rs  datastore.rs  domain.rs  file.rs  http.rs  image_processing.rs  imagestore.rs  inmem.rs  lib.rs  oidc.rs  s3.rs  search.rs  session_store.rs  sqlite.rs
server/src/core/: image.rs  recipe.rs  session.rs  tag.rs  user.rs
server/src/file/: imagebackend.rs
server/src/http/: auth.rs  image.rs  recipe.rs  responses.rs  server.rs  tag.rs
server/src/s3/: imagebackend.rs
server/src/sqlite/: image.rs  pool.rs  recipe.rs  session_store.rs  tag.rs
server/tests/: tests.rs
server/tests/datastore/: common.rs  sqlite.rs
server/tests/datastore/common/: images.rs  recipes.rs  tags.rs  users.rs
server/tests/http/: auth.rs  image.rs  recipe.rs  requests.rs  responses.rs  setup.rs  tag.rs
server/tests/sessionstore/: sqlite.rs
ui/: eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: app.html  app.postcss
ui/src/lib/: AuthProvider.svelte  NavigatingProvider.svelte  auth-context.ts  auth.svelte.ts  error-to-superform.ts  handle-streamed-error.ts  navigating-context.ts  navigating.svelte.ts  replace-query-parameter.ts  theme-switch.ts
ui/src/lib/actions/: sticky.ts
ui/src/lib/api/: fetch.ts  handle-error.ts  query-keys.ts
ui/src/lib/api/action/: image.ts  recipe.ts
ui/src/lib/api/load/: image.ts  recipe.ts  tag.ts  user.ts
ui/src/lib/api/requests/: image.ts  recipe.ts  tag.ts
ui/src/lib/components/: Button.svelte  CloseIconButton.svelte  LightSwitch.svelte  LoginIfUnauthenticated.svelte  PrefetchLink.svelte  RecipeImage.svelte  SingleTag.svelte  StickyFooter.svelte  StreamedError.svelte  TagPicker.svelte
ui/src/lib/components/page-states/: PageErrorState.svelte  PageLoadingState.svelte  PageReauthenticateState.svelte
ui/src/lib/components/recipes/: Recipe.svelte
ui/src/lib/components/recipes/form/: ImageField.svelte  IngredientsField.svelte  InstructionsField.svelte  NotesField.svelte  TagModal.svelte  TagsField.svelte  TitleField.svelte  schema.ts  tag-schema.ts
ui/src/lib/types/: error.ts  recipe.ts  tag.ts
ui/src/routes/: +layout.svelte
ui/src/routes/about/: +page.svelte
ui/src/routes/login/: +page.svelte
ui/src/routes/login/init/: +page.svelte  +page.ts
ui/src/routes/recipes/: +page.svelte  +page.ts  DesktopTagFilter.svelte  OptionsMenu.svelte  Search.svelte  TagFilter.svelte  TagFilterOption.svelte
ui/src/routes/recipes/[id]/: +page.svelte  +page.ts  ViewRecipePage.svelte
ui/src/routes/recipes/[id]/edit/: +page.svelte  +page.ts  EditRecipePage.svelte
ui/src/routes/recipes/new/: +page.svelte  +page.ts
ui/src/routes/settings/: +page.svelte  +page.ts  SettingsPage.svelte
ui/src/routes/tags/: +page.svelte  TagsPage.svelte
ui/static/: browserconfig.xml  site.webmanifest
ui/static/licenses/: server-licenses.json  ui-licenses.txt
