[package]
name = "mise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
thiserror = "1.0"
anyhow = "1.0"
axum = { version = "0.7.5" }
serde = { version = "1.0.199", features = ["derive"] }
openidconnect = { version = "4.0.0-alpha.1" }
reqwest = { version = "0.12.4" }
axum-extra = { version = "0.9.3", features = ["cookie-private"] }
serde_json = "1.0.117"
cookie = "0.18.1"
sha256 = "1.5.0"
toml = "0.8.13"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
chrono = { version = "0.4.38", default-features = false, features = [
	"now",
	"serde",
] }
ring = "0.17.8"
base64 = "0.22.1"
rand = "0.8.5"
