[package]
name = "mise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
thiserror = "1.0"
anyhow = "1.0"
axum = { version = "0.7.5", features = ["multipart"] }
serde = { version = "1.0.199", features = ["derive"] }
openidconnect = { version = "4.0.0-alpha.1" }
reqwest = { version = "0.12.4", features = ["cookies", "json", "multipart"] }
axum-extra = { version = "0.9.3", features = ["cookie-private"] }
serde_json = "1.0.117"
cookie = "0.18.1"
sha256 = "1.5.0"
toml = "0.8.13"
chrono = { version = "0.4.38", default-features = false, features = [
	"now",
	"alloc",
	"serde",
] }
ring = "0.17.8"
base64 = "0.22.1"
rand = "0.8.5"
bidiff = "1.0.0"
bipatch = "1.0.0"
postcard = { version = "1.0.8", features = ["alloc"] }
zstd = "0.13.1"
sea-query = { version = "0.30.7", default-features = false, features = [
	"backend-sqlite",
	"derive",
] }
ulid = { version = "1.1.2", default-features = false, features = [
	"std",
	"serde",
] }
async-trait = "0.1.80"
hex = "0.4.3"
semver = "1.0.23"
reqwest_cookie_store = "0.8.0"
tower-http = { version = "0.5.2", features = ["fs"] }
tower = "0.4.13"
