[package]
name = "mise"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32.0", features = ["bundled", "chrono"] }
thiserror = "1.0"
anyhow = "1.0"
axum = { version = "0.8.1", features = [
	"http1",
	"json",
	"multipart",
	"query",
	"tokio",
], default-features = false }
serde = { version = "1.0.199", features = ["derive"] }
openidconnect = { version = "4.0.0-alpha.1", features = [
	"reqwest",
], default-features = false }
reqwest = { version = "0.12.4", default-features = false, features = [
	"charset",
	"cookies",
	"http2",
	"json",
	"multipart",
	"rustls-tls",
] }
axum-extra = { version = "0.10.0", features = [
	"cookie-private",
], default-features = false }
serde_json = "1.0.117"
cookie = "0.18.1"
sha256 = "1.5.0"
toml = "0.8.13"
chrono = { version = "0.4.38", default-features = false }
ring = "0.17.8"
base64 = { version = "0.22.1", default-features = false }
rand = "0.8.5"
bidiff = "1.0.0"
bipatch = "1.0.0"
postcard = { version = "1.0.8", features = ["alloc"] }
zstd = "0.13.1"
ulid = { version = "1.1.2", features = ["serde"] }
async-trait = "0.1.80"
hex = { version = "0.4.3", default-features = false }
semver = "1.0.23"
reqwest_cookie_store = "0.8.0"
tower-http = { version = "0.6.0", features = ["fs", "timeout"] }
tower = "0.5"
ammonia = "4.0.0"
pulldown-cmark = "0.12.0"
milli_v1 = { git = "https://github.com/meilisearch/meilisearch", package = "milli", tag = "v1.11.1" }
futures = "0.3.31"
